# kontrol

./: .cruft.json  .dockerignore  .flake8  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  flake.nix  funding.json  interpreter  kontrol_prove_report.xml  lemmas.k  pyproject.toml  test_summary.md
.claude/skills/add-cheatcode/: SKILL.md
.claude/skills/update-expected-output/: SKILL.md
.githooks/: pre-push
.github/actions/with-docker/: action.yml
.github/scripts/: check-cachix-pin.sh
.github/workflows/: Dockerfile  docker-push.yml  kontrol-push-fixed-deps.yml  kontrol-push-unfixed-deps.yml  kup-build-kontrol.yml  master-push.yml  release.yml  test-pr.yml  update-expected-output.yml  update-pyproject-nix.yml  update-version.yml  version-bump.yml
IX-loop-invariant/: kcfg-merged-node81  kcfg-original  kcfg-original-node42-merged  node -merged[8,13,19,29]  node19-merged[13,14]  node32-merged[19,26,31]  node41-merged[21,22,31,32,41,42]  node42-merged[15,23,33]  node81-merged[76,77,78,56,79,80]  show1-19  show1-39
docs/: 2023-10-10-running-rpc-server-manually.md  storage-generation.md
docs/external-computation/: .gitignore  README.md  foundry.toml
docs/state-diff/: README.md
nix/kontrol/: default.nix
nix/kontrol-pyk/: build-systems-overlay.nix  default.nix
nix/kontrol-pyk-pyproject/: default.nix
nix/kontrol-source/: default.nix
nix/uv/: default.nix
package/: test-package.sh  version  version.sh
package/test-project/: foundry.toml
package/test-project/test/: Simple.t.sol
scripts/: build-kontrol  selector  update-expected-output  update_pyproject_nix.sh
src/kontrol/: __init__.py  __main__.py  cli.py  counterexample_generation.py  deployment.py  display.py  foundry.py  fuzz.py  hevm.py  kompile.py  natspec.py  options.py  prove.py  rpc.py  solc.py  solc_to_k.py  state_record.py  storage_generation.py  telemetry.py  utils.py  web3_rpc.py
src/kontrol/kdist/: assert.md  bn128.md  cheatcodes.md  evm-optimizations.md  evm_rule_optimizations.md  foundry.md  hevm.md  keccak.md  kontrol.md  kontrol_lemmas.md  no_code_size_checks.md  no_stack_checks.md  plugin.py  trace.md  utils.py  vm.md
src/kontrol/solidity/: AnnotationVisitor.py  Solidity.g4  Solidity.interp  Solidity.tokens  SolidityLexer.interp  SolidityLexer.py  SolidityLexer.tokens  SolidityListener.py  SolidityParser.py  SolidityVisitor.py
src/natspec/: natspec.py  utils.py
src/natspec/kdist/: natspec-grammar.md  plugin.py  readme.md
src/tests/: conftest.py  utils.py
src/tests/end-to-end/: conftest.py  test_kontrol_prove.py
src/tests/integration/: conftest.py  test_foundry_prove.py  test_hevm_prove.py  test_integration.py  test_kontrol.py  test_kontrol_cse.py  test_kontrol_loops.py  test_simbolik_prove.py  test_solc_to_k.py  test_storage_generation.py  test_storage_generation_integration.py  test_tracing.py  utils.py
src/tests/unit/: test_get_test_id.py  (+7 more)
(+323 files in other folders)
