[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kontrol"
version = "1.0.0"
description = "Foundry integration for KEVM"
requires-python = "~=3.10"
dependencies = [
    "kevm-pyk@git+https://github.com/runtimeverification/evm-semantics.git@v1.0.850#subdirectory=kevm-pyk",
    "eth-utils>=5,<6",
    "pycryptodome>=3.20.0,<4",
    "pyevmasm>=0.2.3,<0.3",
    "eth-abi>=5.2.0",
]

[[project.authors]]
name = "Runtime Verification, Inc."
email = "contact@runtimeverification.com"

[project.scripts]
kontrol = "kontrol.__main__:main"
kontrol-kdist = "pyk.kdist.__main__:main"

[project.entry-points.kdist]
kontrol = "kontrol.kdist.plugin"

[dependency-groups]
dev = [
    "autoflake",
    "black",
    "flake8",
    "flake8-bugbear",
    "flake8-comprehensions",
    "flake8-quotes",
    "flake8-type-checking",
    "isort",
    "mypy",
    "pep8-naming",
    "pytest>=7,<8",
    "pytest-cov",
    "pytest-mock",
    "pytest-xdist",
    "pytest-timeout",
    "pyupgrade",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.isort]
profile = "black"
line_length = 120

[tool.autoflake]
recursive = true
expand-star-imports = true
remove-all-unused-imports = true
ignore-init-module-imports = true
remove-duplicate-keys = true
remove-unused-variables = true
exclude = "src/tests/integration/test-data"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.mypy]
disallow_untyped_defs = true
exclude = "src/tests/integration/test-data"
